Fix card width on smaller devices

--- a/src/main/resources/META-INF/resources/frontend/my-styles/game.css
+++ b/src/main/resources/META-INF/resources/frontend/my-styles/game.css
@@ -156,7 +156,7 @@
 }
 
 .tp-hand .tp-hand-card, .tp-submission, .tp-submission-blank {
-    max-width: 28vw;
+    max-width: 50vw;
     cursor: pointer;
 
     display: inline-block;
